--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.69.5",
     "scss": "^0.2.4"
   },
   "devDependencies": {
